Fix some layout bugs

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -9,19 +9,30 @@
 
 @import "mixins";
 
-$border-height: 50px;
+$fallback-border-height: 50px;
 
 * { box-sizing: border-box; }
 
 html {
   height: 100%;
-  padding: $border-height 0 $border-height;
+  padding: $fallback-border-height 0 $fallback-border-height;
+  padding: 5vw 0 5vw;
 }
 
 body {
   min-height: 100%;
-  margin: 0 5% $border-height;
+  margin: 0 5% $fallback-border-height;
+  margin: 0 5% 5vw;
   position: relative; // child elements should be positioned relative to body.
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 // position something off the bottom of the page so that the browser
@@ -34,7 +45,8 @@ body:after {
   top: 100%;
   left: 0;
   right: 0;
-  height: $border-height;
+  height: $fallback-border-height;
+  height: 5vw;
 
   // this pseudo-element is also used as a clearfix, since bdoy contains
   // navigation, which is sometimes (based on a media query) styled as a
@@ -43,8 +55,13 @@ body:after {
 }
 
 main {
-  padding: 0 2em 48px;
+  padding: 0 1em 0;
   font-size: 1.2em;
+
+  @media (min-width: 35em) and (max-width: 45em), (min-width: 65em) {
+    padding-left: 2em;
+    padding-right: 2em;
+  }
 }
 
 main:after {
@@ -57,8 +74,12 @@ main:after {
 footer {
   margin: 0;
   padding: 1em;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0px;
+  z-index: 1;
+}
+
+.container {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
